@startuml PA3_Database_ERD
!define ENTITY class
skinparam class {
    BackgroundColor LightBlue
    BorderColor Black
}

ENTITY users #LightBlue {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    name : VARCHAR(255)
    email : VARCHAR(255)
    password : VARCHAR(255)
    role : ENUM
    + prodi_id : BIGINT <<FK>>
    is_active : BOOLEAN
}

ENTITY prodi #LightBlue {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    kode_prodi : VARCHAR(10)
    nama_prodi : VARCHAR(255)
    + kaprodi_id : BIGINT <<FK>>
}

ENTITY periode_akademik #LightBlue {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    tahun_ajaran : VARCHAR(20)
    semester : ENUM
    is_active : BOOLEAN
    start_date : VARCHAR(255)
    end_date : VARCHAR(255)
}

ENTITY dosenn #LightPink {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + pegawai_id : VARCHAR(50) <<FK>>
    nama : VARCHAR(255)
    nidn : VARCHAR(20)
    email : VARCHAR(255)
    nomor_telepon : VARCHAR(255)
}

ENTITY jadwal_dosen #LightPink {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + pegawai_id : VARCHAR(50) <<FK>>
    kode_mk : VARCHAR(20)
    nama_mk : VARCHAR(255)
    kelas : VARCHAR(255)
    semester : ENUM
    tahun_ajaran : VARCHAR(20)
}

ENTITY kuesioner_uploads #LightGreen {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + user_id : BIGINT <<FK>>
    file_path : VARCHAR(500)
    + pegawai_id : VARCHAR(50) <<FK>>
    kode_matakuliah : VARCHAR(20)
    extracted_data : JSON
    ai_analysis : TEXT
}

ENTITY rps_monitoring_snapshots #LightGreen {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + prodi_id : BIGINT <<FK>>
    + periode_id : BIGINT <<FK>>
    snapshot_data : JSON
    generated_at : TIMESTAMP
}

ENTITY perkuliahan_monitoring_snapshots #LightGreen {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + prodi_id : BIGINT <<FK>>
    + periode_id : BIGINT <<FK>>
    snapshot_data : JSON
    generated_at : TIMESTAMP
}

ENTITY laporan_gjm #LightYellow {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + user_id : BIGINT <<FK>>
    + template_id : BIGINT <<FK>>
    jenis_laporan : VARCHAR(255)
    judul_laporan : VARCHAR(255)
    ai_konten_preview : VARCHAR(255)
}

ENTITY laporan_bulanan #LightYellow {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

ENTITY template_laporan #LightYellow {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    nama_template : VARCHAR(255)
    jenis_laporan : VARCHAR(255)
    file_path : VARCHAR(500)
    + prodi_id : BIGINT <<FK>>
    is_active : BOOLEAN
}

ENTITY laporan_gkm #LightYellow {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + user_id : BIGINT <<FK>>
    file_path : VARCHAR(500)
    jenis_laporan : VARCHAR(255)
    tahun : VARCHAR(255)
    status : VARCHAR(255)
}

ENTITY document_chunks #Plum {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + template_id : BIGINT <<FK>>
    chunk_index : VARCHAR(255)
    content : TEXT
    embedding : VARCHAR(255)
}

ENTITY embeddings_cache #Plum {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    hash : VARCHAR(255)
    embedding : VARCHAR(255)
    model_name : VARCHAR(255)
    created_at : TIMESTAMP
}

ENTITY jadwal_reminder #Orange {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + user_id : BIGINT <<FK>>
    + prodi_id : BIGINT <<FK>>
    jenis_reminder : VARCHAR(255)
    jadwal_kirim : VARCHAR(255)
    is_active : BOOLEAN
}

ENTITY log_email #Orange {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    + prodi_id : BIGINT <<FK>>
    + reminder_id : BIGINT <<FK>>
    recipient : VARCHAR(255)
    subject : VARCHAR(255)
    status : VARCHAR(255)
    sent_at : TIMESTAMP
}

ENTITY kirim_laporan_history #Orange {
    + id : BIGINT <<PK>>
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    sent_by : VARCHAR(255)
    laporan_type : VARCHAR(255)
    + laporan_id : BIGINT <<FK>>
    recipients : VARCHAR(255)
    sent_at : TIMESTAMP
}

ENTITY cache #LightGray {
}

ENTITY jobs #LightGray {
}

users }o--|| prodi
kuesioner_uploads }o--|| users
laporan_gjm }o--|| users
laporan_bulanan }o--|| users
jadwal_reminder }o--|| users
kirim_laporan_history }o--|| users
rps_monitoring_snapshots }o--|| prodi
perkuliahan_monitoring_snapshots }o--|| prodi
laporan_bulanan }o--|| prodi
template_laporan }o--|| prodi
jadwal_reminder }o--|| prodi
log_email }o--|| prodi
rps_monitoring_snapshots }o--|| periode_akademik
perkuliahan_monitoring_snapshots }o--|| periode_akademik
jadwal_dosen }o--|| dosenn
laporan_gjm }o--|| template_laporan
laporan_bulanan }o--|| template_laporan
document_chunks }o--|| template_laporan
log_email }o--|| jadwal_reminder

@enduml